--- a/index-barcode.html
+++ b/index-barcode.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Requisição de Compras – DELÍCIA GOURMET</title>
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#2563eb">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <meta name="theme-color" content="#2563eb">
@@ -357,6 +359,16 @@ function limparCampos(){
   quantidade.value="";
   observacoes.value="";
   unidadeBox.innerHTML="";
+}
+</script>
+<script>
+if ("serviceWorker" in navigator) {
+  window.addEventListener("load", () => {
+    navigator.serviceWorker
+      .register("/service-worker.js")
+      .then(() => console.log("✅ Service Worker registrado"))
+      .catch(err => console.error("❌ SW erro:", err));
+  });
 }
 </script>
 
