--- a/index-barcode.html
+++ b/index-barcode.html
@@ -211,8 +211,8 @@ th{background:#f1f5f9}
 
 <script>
 /* ================== CONFIG ================== */
-const SUPABASE_URL="https://SEU_PROJETO.supabase.co";
-const SUPABASE_KEY="SUA_ANON_KEY";
+const SUPABASE_URL="https://mybsriouiwqsdufujbsc.supabase.co";
+const SUPABASE_KEY="sb_publishable_AUyBEIVCAMUoXwDKUmlqSw_v8EY8rVN";
 const sb=supabase.createClient(SUPABASE_URL,SUPABASE_KEY);
 
 /* ================== STATE ================== */
