--- a/index-barcode.html
+++ b/index-barcode.html
@@ -2,12 +2,11 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Requisição de Compras – DELÍCIA GOURMET</title>
-<link rel="manifest" href="/manifest.json">
-<meta name="theme-color" content="#2563eb">
+<title>Requisição de Compras – Delícia Gourmet</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <meta name="theme-color" content="#2563eb">
+<link rel="manifest" href="/manifest.json">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
@@ -25,33 +24,41 @@ body{
 }
 .container{
   background:#fff;
-  border-radius:18px;
-  box-shadow:0 12px 30px rgba(0,0,0,.12);
+  border-radius:20px;
+  box-shadow:0 16px 40px rgba(0,0,0,.15);
   max-width:520px;
   width:100%;
   padding:22px;
   position:relative;
 }
-h2{text-align:center;margin:6px 0 18px;font-weight:800}
+h2{
+  text-align:center;
+  font-weight:800;
+  margin:4px 0 18px;
+}
 
-label{font-weight:700;margin-top:12px;display:block}
+label{
+  font-weight:700;
+  margin-top:12px;
+  display:block;
+}
 input,select,textarea{
   width:100%;
   padding:14px;
   margin-top:6px;
   border:1px solid #cbd5e1;
-  border-radius:10px;
+  border-radius:12px;
   font-size:15px;
 }
 input[readonly]{background:#f1f5f9}
-textarea{min-height:70px}
+textarea{min-height:80px}
 
 button{
   width:100%;
   padding:14px;
   margin-top:10px;
   border:none;
-  border-radius:12px;
+  border-radius:14px;
   font-weight:800;
   font-size:15px;
   cursor:pointer;
@@ -65,7 +72,7 @@ button{
   width:100%;
   height:260px;
   background:#000;
-  border-radius:14px;
+  border-radius:16px;
   margin-top:10px;
   overflow:hidden;
 }
@@ -91,10 +98,10 @@ button{
   justify-content:space-between;
   align-items:center;
   background:#f1f5f9;
-  padding:10px 14px;
-  border-radius:12px;
+  padding:12px 16px;
+  border-radius:14px;
   font-weight:800;
-  margin-bottom:10px;
+  margin-bottom:12px;
 }
 
 .overlay{
@@ -113,7 +120,7 @@ button{
   background:#dcfce7;
   color:#166534;
   padding:12px;
-  border-radius:12px;
+  border-radius:14px;
   text-align:center;
   font-weight:800;
   margin-top:12px;
@@ -128,21 +135,34 @@ table{
 }
 th,td{
   border:1px solid #e5e7eb;
-  padding:6px;
+  padding:8px;
   text-align:center;
 }
-th{background:#f1f5f9}
+th{
+  background:#f1f5f9;
+  font-weight:800;
+}
+.action-btn{
+  padding:6px 10px;
+  border-radius:8px;
+  font-weight:800;
+  cursor:pointer;
+  border:none;
+}
+.action-delete{
+  background:#fee2e2;
+  color:#991b1b;
+}
 </style>
 </head>
 
 <body>
 <div class="container">
 
-<div class="overlay" id="overlay">Enviando...</div>
+<div class="overlay" id="overlay">Enviando…</div>
 
 <h2>📋 Requisição de Compras</h2>
 
-<!-- USUÁRIO LOGADO -->
 <div id="userArea"></div>
 
 <!-- LOGIN -->
@@ -156,6 +176,7 @@ th{background:#f1f5f9}
   <button class="btn-dark" id="btnLogin">🔐 Entrar</button>
 </div>
 
+<!-- APP -->
 <div id="appArea" style="display:none">
 
 <label>Setor</label>
@@ -189,17 +210,23 @@ th{background:#f1f5f9}
 
 <div class="alert" id="alerta">✅ Requisição enviada com sucesso</div>
 
-<h3>Histórico (7 dias)</h3>
+<h3>Histórico (últimos 7 dias)</h3>
+
 <table>
 <thead>
 <tr>
-<th>Produto</th><th>Un.</th><th>Qtd</th><th>Setor</th><th>Status</th><th>Ação</th>
+<th>Produto</th>
+<th>Un.</th>
+<th>Qtd</th>
+<th>Setor</th>
+<th>Status</th>
+<th>Ação</th>
 </tr>
 </thead>
 <tbody id="historico"></tbody>
 </table>
 
-<button class="btn-muted" id="btnMais">Carregar mais</button>
+<button class="btn-muted" id="btnMais" style="display:none">Carregar mais</button>
 
 </div>
 
@@ -210,38 +237,41 @@ th{background:#f1f5f9}
 </div>
 
 <script>
-/* ================== CONFIG ================== */
-const SUPABASE_URL="https://mybsriouiwqsdufujbsc.supabase.co";
-const SUPABASE_KEY="sb_publishable_AUyBEIVCAMUoXwDKUmlqSw_v8EY8rVN";
-const sb=supabase.createClient(SUPABASE_URL,SUPABASE_KEY);
+/* ================== SUPABASE ================== */
+const SUPABASE_URL = "https://mybsriouiwqsdufujbsc.supabase.co";
+const SUPABASE_KEY = "sb_publishable_AUyBEIVCAMUoXwDKUmlqSw_v8EY8rVN";
+const sb = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
 /* ================== STATE ================== */
-let usuarioLogado=JSON.parse(localStorage.getItem("usuario"));
-let page=0,limit=10;
-let lendo=false, unidadeAuto="", barcodeFinal="";
-const beep=document.getElementById("beep");
+let usuarioLogado = JSON.parse(localStorage.getItem("usuario"));
+let page = 0, limit = 10;
+let lendo = false;
+let unidadeAuto = "";
+let barcodeFinal = "";
+const beep = document.getElementById("beep");
 
 /* ================== LOGIN ================== */
-async function login(){
-  const u=usuario.value.trim(), s=senha.value.trim();
-  if(!u||!s) return alert("Informe usuário e senha");
+btnLogin.onclick = async () => {
+  if(!usuario.value || !senha.value) return alert("Informe usuário e senha");
 
-  const {data}=await sb.from("usuarios")
-    .select("*").eq("usuario",u).eq("senha",s).eq("ativo",true).single();
+  const { data } = await sb
+    .from("usuarios")
+    .select("*")
+    .eq("usuario", usuario.value)
+    .eq("senha", senha.value)
+    .eq("ativo", true)
+    .single();
 
   if(!data) return alert("Usuário ou senha inválidos");
 
-  localStorage.setItem("usuario",JSON.stringify(data.usuario));
+  localStorage.setItem("usuario", JSON.stringify(data.usuario));
   location.reload();
-}
+};
 
-btnLogin.onclick=login;
-
-/* ================== LOGADO ================== */
 if(usuarioLogado){
-  loginArea.style.display="none";
-  appArea.style.display="block";
-  userArea.innerHTML=`
+  loginArea.style.display = "none";
+  appArea.style.display = "block";
+  userArea.innerHTML = `
     <div class="userbox">
       👤 ${usuarioLogado}
       <button class="btn-danger" onclick="logout()">Sair</button>
@@ -256,103 +286,122 @@ function logout(){
 
 /* ================== BARCODE ================== */
 function normalizar(c){
-  return "0"+String(c).replace(/\D/g,"");
+  return "0" + String(c).replace(/\D/g,"");
 }
 
 /* ================== BUSCAR PRODUTO ================== */
 async function buscarProduto(code){
-  barcodeFinal=code;
-  const r=await fetch(`/api/buscar-barcode?barcode=${code}`);
-  const j=await r.json();
+  barcodeFinal = code;
+  const r = await fetch(`/api/buscar-barcode?barcode=${code}`);
+  const j = await r.json();
   if(!j.produto) return alert("Produto não encontrado");
 
-  produto.value=j.produto.descricao;
-  unidadeAuto=j.produto.unidadeDeVenda;
-  unidadeBox.innerHTML=`<div class="badge">📏 Unidade: ${unidadeAuto}</div>`;
+  produto.value = j.produto.descricao;
+  unidadeAuto = j.produto.unidadeDeVenda;
+  unidadeBox.innerHTML = `<div class="badge">📏 Unidade: ${unidadeAuto}</div>`;
   beep.play();
-  if(lendo){Quagga.stop();lendo=false;}
+
+  if(lendo){ Quagga.stop(); lendo=false; }
 }
 
 /* ================== MANUAL ================== */
-btnManual.onclick=()=>barcode.value&&buscarProduto(normalizar(barcode.value));
+btnManual.onclick = () => {
+  if(barcode.value) buscarProduto(normalizar(barcode.value));
+};
 
 /* ================== CAMERA ================== */
-btnCamera.onclick=()=>{
+btnCamera.onclick = () => {
   if(lendo) return;
-  lendo=true;
+  lendo = true;
+
   Quagga.init({
-    inputStream:{type:"LiveStream",target:camera,constraints:{facingMode:"environment"}},
-    decoder:{readers:["ean_reader","ean_8_reader","upc_reader","code_128_reader"]},
+    inputStream:{
+      type:"LiveStream",
+      target:camera,
+      constraints:{ facingMode:"environment" }
+    },
+    decoder:{ readers:["ean_reader","ean_8_reader","upc_reader","code_128_reader"] },
     locate:true
-  },err=>{
-    if(err) return alert("Erro câmera");
+  }, err => {
+    if(err) return alert("Erro ao acessar câmera");
     Quagga.start();
   });
-  Quagga.onDetected(r=>buscarProduto(normalizar(r.codeResult.code)));
+
+  Quagga.onDetected(r => buscarProduto(normalizar(r.codeResult.code)));
 };
 
 /* ================== ENVIO ================== */
-btnEnviar.onclick=async()=>{
-  if(!usuarioLogado) return;
-  if(!setor.value||!produto.value||!quantidade.value) return alert("Preencha tudo");
+btnEnviar.onclick = async () => {
+  if(!setor.value || !produto.value || !quantidade.value){
+    return alert("Preencha todos os campos");
+  }
 
   overlay.style.display="flex";
 
   await sb.from("requisicoes").insert({
-    usuario:usuarioLogado,
-    setor:setor.value,
-    produto:produto.value,
-    unidade:unidadeAuto,
-    quantidade:quantidade.value,
-    observacoes:observacoes.value,
-    barcode:barcodeFinal,
-    status:"PENDENTE"
+    usuario: usuarioLogado,
+    setor: setor.value,
+    produto: produto.value,
+    unidade: unidadeAuto,
+    quantidade: quantidade.value,
+    observacoes: observacoes.value,
+    barcode: barcodeFinal,
+    status: "PENDENTE"
   });
 
   overlay.style.display="none";
   alerta.style.display="block";
   setTimeout(()=>alerta.style.display="none",3000);
+
   limparCampos();
-  page=0;
+  page = 0;
   historico.innerHTML="";
   carregarHistorico();
 };
 
 /* ================== HISTÓRICO ================== */
 async function carregarHistorico(){
-  const seteDias=new Date(Date.now()-7*86400000).toISOString();
-  const {data}=await sb.from("requisicoes")
+  const seteDias = new Date(Date.now()-7*86400000).toISOString();
+
+  const { data } = await sb
+    .from("requisicoes")
     .select("*")
-    .eq("usuario",usuarioLogado)
-    .gte("created_at",seteDias)
-    .order("created_at",{ascending:false})
-    .range(page*limit,(page+1)*limit-1);
+    .eq("usuario", usuarioLogado)
+    .gte("created_at", seteDias)
+    .order("created_at", { ascending:false })
+    .range(page*limit, (page+1)*limit-1);
 
   data.forEach(r=>{
-    historico.innerHTML+=`
-    <tr>
-      <td>${r.produto}</td>
-      <td>${r.unidade}</td>
-      <td>${r.quantidade}</td>
-      <td>${r.setor}</td>
-      <td>${r.status}</td>
-      <td><button class="btn-danger" onclick="excluir('${r.id}')">X</button></td>
-    </tr>`;
+    const diff = (Date.now() - new Date(r.created_at)) / 3600000;
+    historico.innerHTML += `
+      <tr>
+        <td>${r.produto}</td>
+        <td>${r.unidade}</td>
+        <td>${r.quantidade}</td>
+        <td>${r.setor}</td>
+        <td>${r.status}</td>
+        <td>
+          ${diff <= 1 ? `<button class="action-btn action-delete" onclick="excluir('${r.id}')">Excluir</button>` : "-"}
+        </td>
+      </tr>`;
   });
+
+  btnMais.style.display = data.length === limit ? "block" : "none";
   page++;
 }
 
-btnMais.onclick=carregarHistorico;
+btnMais.onclick = carregarHistorico;
 
 /* ================== EXCLUIR ================== */
 async function excluir(id){
-  if(!confirm("Excluir registro?")) return;
-  await sb.from("requisicoes").delete().eq("id",id);
+  if(!confirm("Deseja excluir esta requisição?")) return;
+  await sb.from("requisicoes").delete().eq("id", id);
   historico.innerHTML="";
   page=0;
   carregarHistorico();
 }
 
+/* ================== UTIL ================== */
 function limparCampos(){
   barcode.value="";
   produto.value="";
@@ -360,15 +409,10 @@ function limparCampos(){
   observacoes.value="";
   unidadeBox.innerHTML="";
 }
-</script>
-<script>
-if ("serviceWorker" in navigator) {
-  window.addEventListener("load", () => {
-    navigator.serviceWorker
-      .register("/service-worker.js")
-      .then(() => console.log("✅ Service Worker registrado"))
-      .catch(err => console.error("❌ SW erro:", err));
-  });
+
+/* ================== SERVICE WORKER ================== */
+if("serviceWorker" in navigator){
+  navigator.serviceWorker.register("/service-worker.js");
 }
 </script>
 
